# ugit

./: .gitignore  .ugitignore  README.md  pyproject.toml
ugit/: _diff.py  _remote.py  base.py  cli.py  data.py
