[project]
name = "ugit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "merge3>=0.0.15",
    "orjson>=3.10.16",
    "ruff>=0.11.3",
    "typer>=0.15.2",
]

[project.scripts]
ugit = "ugit.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
